# SR2

./: CMakeLists.txt  README.md  lab3.mtl  main.cpp
